--- a/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/build.gradle
+++ b/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/build.gradle
@@ -34,7 +34,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
 }
