--- a/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/build.gradle
+++ b/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/build.gradle
@@ -40,5 +40,8 @@ dependencies {
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.android.material:material:1.2.1'
 
 }
