--- a/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/.travis.yml
+++ b/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/.travis.yml
@@ -1,4 +1,12 @@
 language: android
-dist: trusty
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+android:
+  components:
+    - tools # to get the new `repository-11.xml`
+    - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
+    - platform-tools
+    - build-tools-27.0.3
+    - android-27
+before_install:
+  - yes | sdkmanager "platforms;android-27"
+script:
+   - ./gradlew build connectedCheck
