--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".HomePage"
+            android:name=".TopJokesPage"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
         <activity android:name=".AboutPage" />
