--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,22 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".CommentActivity"></activity>
         <activity
             android:name=".TopJokesPage"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
         <activity android:name=".AboutPage" />
         <activity android:name=".SavedJokes" />
-        <activity
-            android:name=".SplashScreen"
-            android:theme="@style/SplashScreenTheme">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
